# tic-tac-toe-rs

./: .gitignore  Cargo.toml  Dioxus.toml  flake.nix
.github/: rust-ci.yml
.github/workflows/: rust-ci.yml
src/: app.rs  clap.rs  cli.rs  completions.rs  generate.rs  lib.rs  logic.rs  main.rs
src/cli/: mod.rs  render_board.rs  run_game.rs
src/logic/: game_error.rs  game_state.rs  game_status.rs  generate.rs  mod.rs  player.rs
