[package]
name = "tic-tac-toe-rs"
version = "0.1.0"
authors = ["Elias Ainsworth <pilum-murialis.toge@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
clap_complete = "4.5.38"
crossterm = "0.28.1"

dioxus = { version = "0.5", features = ["desktop", "router"] }

# Debug
dioxus-logger = "0.5.1"
env_logger = "0.11.5"
figlet-rs = "0.1.5"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
